<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormPrizes">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="605dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/Create_lbl_Premio"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOrganizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prize_lbl_organization"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextOrganizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prize_hint_organization"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:text=""
            android:textColorHint="#6E6E6E" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prize_lbl_nombre"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prize_hint_nombre"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:text=""
            android:textColorHint="#6E6E6E" />

        <TextView
            android:id="@+id/textViewDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prize_hint_descripcion"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prize_lbl_descripcion"
            android:inputType="text|textMultiLine"
            android:lines="3"
            android:maxLength="500"
            android:text=""
            android:textColorHint="#6E6E6E" />

        <Button
            android:id="@+id/button_create_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:onClick="onCLickCreatePrize"
            android:text="@string/Create" />

        <Button
            android:id="@+id/button_cancel_prize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onCLickCancelPrize"
            android:text="@string/Cancel" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>