<resources>
    <string name="app_name">Vinilos</string>
    <string name="rol_collector">COLECCIONISTA</string>
    <string name="rol_visitor">VISITANTE</string>
    <string name="collectors">COLECCIONISTAS</string>
    <string name="prizes">PREMIOS</string>
    <string name="albums">ÁLBUMES</string>
    <string name="artists">ARTISTAS</string>
    <string name="MainMenu">PRINCIPAL</string>
    <string name="CreatePrizes">CREAR PREMIO</string>
    <string name="CreateAlbums">CREAR ÁLBUM</string>
    <string name="Create">CREAR</string>
    <string name="Cancel">CANCELAR</string>
    <string name="Create_lbl_Premio">Crear Premio</string>
    <string name="prize_lbl_organization">Organización</string>
    <string name="prize_hint_organization">Escriba la organización</string>
    <string name="prize_lbl_nombre">Nombre del premio</string>
    <string name="prize_hint_nombre">Escriba un nombre</string>
    <string name="prize_lbl_descripcion">Descripción del premio</string>
    <string name="prize_hint_descripcion">Escriba una descripcion</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="almacenadoOkPremio">El Premio se ha almacenado con exito</string>
    <string name="almacenadoError">Error, Intente de nuevo</string>
    <string name="Create_lbl_Album">Crear álbum</string>
    <string name="album_lbl_nombre">Nombre</string>
    <string name="album_lbl_cover">Cover</string>
    <string name="album_lbl_release_date">Fecha lanzamiento</string>
    <string name="album_lbl_description">Descripción</string>
    <string name="album_lbl_genre">Genero</string>
    <string name="album_lbl_record_label">Disquera</string>
    <string name="albumCreationSuccess">Álbum creado correctamente</string>
    <string name="albumCreationFail">Error creando álbum, Intente de nuevo</string>
    <string name="album_alert_creation_title">Creación álbum</string>
    <string name="album_spinner_text">Seleccionar</string>
    <string name="comments">Comentarios</string>
    <string name="comment_hint_descripcion">Escriba su comentario</string>
    <string name="description">Descripcion</string>
    <string name="album_lbl_imagenArt">imagen artista</string>
    <string name="album_lbl_dateArt">Fecha artista</string>
    <string name="AlbumsAsociados">Albums Asociados</string>
    <string name="PremiosAsociados">Premios Asociados</string>
    <string name="FechaNacimiento">Fecha Nacimiento</string>
    <string-array name="genre_array">
        <item>Seleccionar</item>
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="record_label_array">
        <item>Seleccionar</item>
        <item>Sony Music</item>
        <item>Emi</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
    <string name="Create_lbl_comment">Crear comentario</string>
    <string name="CreateComment">CREAR COMENTARIO</string>
    <string name="lbl_comment">Comentario</string>
    <string-array name="rating_array">
        <item>Seleccionar</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="lbl_rating">Puntuación</string>
    <string name="comment_spinner_text">Seleccionar</string>
    <string name="comment_alert_creation_title">Creación comentario</string>
    <string name="commentCreationSuccess">Comentario creado correctamente</string>
    <string name="commentCreationFail">Error creando comentario, Intente de nuevo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="max_caracteres">Campo no puede tener más de 500 caracteres</string>
</resources>