...
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:navGraph="@navigation/nav_graph"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_prizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/Create_lbl_Premio"
        android:onClick="onClickFlapPrizes"
...
