...
            android:layout_height="400dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/principal"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/button_collector_rol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rol_collector"
            android:onClick="onCLickSelectCollectorRol" />

...
